# XandLLM

./: .gitattributes  .gitignore  Cargo.toml  README.md
apidocs/: XandLLM.postman_collection.json
config/: default.toml
crates/xandllm-api/: Cargo.toml
crates/xandllm-api/src/: error.rs  lib.rs  middleware.rs  server.rs  streaming.rs  tests.rs  types.rs
crates/xandllm-api/src/routes/: chat.rs  chat_new.rs  completions.rs  mod.rs  models.rs
crates/xandllm-cli/: Cargo.toml
crates/xandllm-cli/src/: config.rs  main.rs  think_filter.rs
crates/xandllm-cli/src/commands/: chat.rs  delete.rs  distill.rs  list.rs  mod.rs  pull.rs  run.rs  serve.rs
crates/xandllm-core/: Cargo.toml  build.rs
crates/xandllm-core/csrc/: engine.c  engine.h  gemma3.cu  gemma3.h  gguf.c  gguf.h  quant.cu  quant.h
crates/xandllm-core/src/: chat_template.rs  device.rs  error.rs  gguf_engine.rs  kv_cache.rs  lib.rs  llama.rs  loader.rs  model.rs  quantized.rs  sampling.rs  tokenizer.rs
crates/xandllm-distill/: Cargo.toml
crates/xandllm-distill/src/: dataset.rs  distiller.rs  export.rs  lib.rs  presets.rs  student.rs  teacher.rs
crates/xandllm-hub/: Cargo.toml
crates/xandllm-hub/src/: cache.rs  download.rs  error.rs  integrity.rs  lib.rs
docker/: Dockerfile  docker-compose.yml  integration_test.sh
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ChatPane.tsx  Message.tsx  ModelBadge.tsx  SettingsModal.tsx  Sidebar.tsx
frontend/src/hooks/: useChat.ts  useConversations.ts  useServerInfo.ts
scripts/: build-cuda.bat  build-linux-cuda.sh  build-linux.sh  distill-1b.sh  distill-3b.sh  distill-7b.sh  distill-docker.sh  distill-finetune-1b.sh  distill-finetune-3b.sh  distill-finetune-7b.sh
test-data/: stub_tokenizer.json
