[package]
name = "xandllm-api"
version.workspace = true
edition.workspace = true

[features]
default = []
cuda = ["xandllm-core/cuda"]
metal = ["xandllm-core/metal"]

[dependencies]
xandllm-core = { path = "../xandllm-core" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
futures.workspace = true
regex.workspace = true
reqwest = { version = "0.12", features = ["json", "stream"] }
jsonschema.workspace = true

[dev-dependencies]
http-body-util.workspace = true
candle-core.workspace = true
