[package]
name = "xandllm-distill"
version.workspace = true
edition.workspace = true
description = "Knowledge-distillation utilities for XandLLM"

[features]
default = []
cuda  = ["xandllm-core/cuda"]
metal = ["xandllm-core/metal"]

[dependencies]
xandllm-core = { path = "../xandllm-core" }
xandllm-hub  = { path = "../xandllm-hub" }
candle-core          = { workspace = true }
candle-nn            = { workspace = true }
candle-transformers  = { workspace = true }
tokenizers           = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
tokio                = { workspace = true }
tracing              = { workspace = true }
thiserror            = { workspace = true }
anyhow               = { workspace = true }
indicatif            = { workspace = true }

[dev-dependencies]
tempfile = "3"
